<resources>
    <string name="app_name">Blood Pressure Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="textView_SYS">SYS</string>
    <string name="textView_DIA">DIA</string>
    <string name="textView_Pulse">Pulse</string>
    <string name="textView_Time">Time</string>

    <string name="textView_noRecordsYet">No records yet</string>

</resources>