<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView_SYS_Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/textView_SYS"
            android:textFontWeight="300"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView_DIA_Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/textView_DIA"
            android:textFontWeight="300"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView_Pulse_Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/textView_Pulse"
            android:textFontWeight="300"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView_Time_Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/textView_Time"
            android:textFontWeight="300"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_noRecordsYet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/textView_noRecordsYet"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_bloodPressureList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>